add blueprints for jobs and public pages this includes the routes: - /signup/create - /jobs/search_by_skill - /jobs/your_apps
convert to blueprints

--- a/.gitignore
+++ b/.gitignore
@@ -45,3 +45,7 @@ docs/_build
 # Virtualenvs
 env
 env*
+
+# programmatically imported/compiled assets
+application/static/govuk_elements
+application/static/gen
