use asset manager at crossgovernmentservices/govuk-assets-flask

--- a/.gitignore
+++ b/.gitignore
@@ -49,3 +49,5 @@ env*
 # programmatically imported/compiled assets
 application/static/govuk_elements
 application/static/gen
+application/templates/govuk_template
+application/static/govuk_template
